fixed overflow visible on really long description

--- a/root/static/themes/classic/css/shared.css
+++ b/root/static/themes/classic/css/shared.css
@@ -343,6 +343,7 @@ fieldset{
     max-height:300px;
     padding:10px 5px;
     background-color:#fff;
+    overflow:hidden;
 }
 
 .TAN-news > ul > li{
